--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,7 +567,8 @@ select:visited {
   position: fixed;
   width: 280px;
   overflow-y: scroll;
-  background-color: #1c1c1c;
+  background-color: white;
+ 
   padding: 40px 0px;
   -webkit-transition: all 0.5s ease-in;
   -o-transition: all 0.5s ease-in;
@@ -590,7 +591,7 @@ select:visited {
     transition: .3s all ease-in-out;
     border-bottom: 1px dashed rgba(255, 255, 255, 0.1); }
     .str-mobile_menu_content .str-mobile-main-navigation .navbar-nav li a {
-      color: #d5d5d5;
+      color: black;
       padding: 0;
       width: 100%;
       display: block;
